--- a/style.css
+++ b/style.css
@@ -2,11 +2,71 @@
   margin: 0;
   padding: 0;
 }
-
+:root {
+  --DarkBlue: hsl(240, 38%, 20%);
+  --GrayishBlue: hsl(240, 18%, 77%);
+}
+body {
+  font-size: 32px;
+  font-family: "Inter", sans-serif;
+}
 .attribution {
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+main {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: center;
+  background-image: url(./images/pattern-bg.svg);
+}
+.curve-bg {
+  position: absolute;
+  bottom: 0;
+}
+.slider {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background: yellow;
+  align-items: center;
+  position: absolute;
+}
+.info-container {
+  background-image: url(./images/pattern-quotes.svg);
+  background-repeat: no-repeat;
+  background-position-x: 100px;
+  width: 90%;
+  position: relative;
+  left: 0;
+  margin-left: 5em;
+  padding-top: 2em;
+  z-index: 5;
+}
+.info-container .hero {
+  position: relative;
+  right: 0;
+}
+.hero {
+  display: grid;
+  position: relative;
+  z-index: 2;
+}
+button {
+  width: 90px;
+  height: 45px;
+  margin: -30px;
+  margin-left: 60px;
+  border: none;
+  border-radius: 50px;
+  align-items: center;
+  box-shadow: 0px 10px 20px 3px rgba(32, 32, 70, 0.3);
+}
+button img {
+  margin: 0 1em;
 }
