--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
   height: 100vh;
   background-repeat: no-repeat;
   background-position-x: 650px;
-  background-position-y: 120px;
+  background-position-y: 30px;
   background-image: url(./images/pattern-bg.svg);
 }
 .curve-bg {
@@ -39,7 +39,7 @@ main {
   align-items: center;
   justify-items: left;
   position: absolute;
-  height: 90%;
+  height: 60%;
   animation: slide 2s ease;
 }
 @keyframes slide {
@@ -85,7 +85,7 @@ main {
   z-index: 3;
   width: 100px;
   height: 50px;
-  margin: -50px;
+  margin: 0px;
   margin-left: 70px;
   border: none;
   border-radius: 50px;
@@ -96,7 +96,7 @@ main {
   flex-direction: row;
   justify-content: space-around;
 }
-button img {
+.controls img {
   margin: 0;
 }
 blockquote {
