--- a/style.css
+++ b/style.css
@@ -80,12 +80,12 @@ main {
   margin-top: 2em;
 }
 .controls {
-  grid-area: 2/2;
+  position: absolute;
+  bottom: 6rem;
+  right: 35rem;
   z-index: 3;
   width: 100px;
   height: 50px;
-  margin: 0px;
-  margin-left: 70px;
   border: none;
   border-radius: 50px;
   align-items: center;
